Add profile hide adn image reload button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
   </div>
   <div class="stripped">
     <div class="container">
+      <div class="plugin profile-controll">
+        <a href="#" id="hideProfile">
+          <i class="icon-eye-off"></i>
+        </a>
+        <a href="#" id="reloadImage">
+          <i class="icon-arrows-cw"></i>
+        </a>
+      </div>
       <div class="profile">
         <div class="circle-img">
           <img src="/dist/img/avatar.jpg" alt="">
@@ -54,7 +62,7 @@
           </li>
         </ul>
       </div>
-      <div id="userInfo"></div>
+      <div id="userInfo" class="plugin"></div>
     </div>
   </div>
 
