--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>distolma.vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>distolma.vue</title><link href=/dist/static/css/app.358bbaca6b84b183154efd360bdd4066.css rel=stylesheet><link href=/static/css/app.358bbaca6b84b183154efd360bdd4066.css rel=stylesheet><link href=/static/css/app.358bbaca6b84b183154efd360bdd4066.css rel=stylesheet><link href=/static/css/app.358bbaca6b84b183154efd360bdd4066.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/dist/static/js/manifest.fe5f8b72f4e8b15d047c.js></script><script type=text/javascript src=/dist/static/js/vendor.d78043f0beb6fac0380b.js></script><script type=text/javascript src=/dist/static/js/app.3e035ff1bc66502a98af.js></script><script type=text/javascript src=/static/js/manifest.fe5f8b72f4e8b15d047c.js></script><script type=text/javascript src=/static/js/vendor.d78043f0beb6fac0380b.js></script><script type=text/javascript src=/static/js/app.3e035ff1bc66502a98af.js></script><script type=text/javascript src=/static/js/manifest.fe5f8b72f4e8b15d047c.js></script><script type=text/javascript src=/static/js/vendor.d78043f0beb6fac0380b.js></script><script type=text/javascript src=/static/js/app.3e035ff1bc66502a98af.js></script><script type=text/javascript src=/static/js/manifest.fe5f8b72f4e8b15d047c.js></script><script type=text/javascript src=/static/js/vendor.d78043f0beb6fac0380b.js></script><script type=text/javascript src=/static/js/app.3e035ff1bc66502a98af.js></script></body></html>
