--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
   <title>Distolma</title>
-  <base href="./dist/">
+  <base href="/dist/">
 </head>
 
 <body>
